@@ -5,10 +5,11 @@
   * Support for "DB_ENV->memp_trickle()", "DB_ENV->get_lg_bsize()",
     "DB_ENV->get_lg_dir()", "DB_ENV->get_lg_filemode()",
     "DB_ENV->set_lg_filemode()", "DB_ENV->get_lk_detect()",
-    "DB_ENV->get_lg_regionmax()", "DB_ENV->get_lk_max_lockers()", 
+    "DB_ENV->get_lg_regionmax()", "DB_ENV->get_lk_max_lockers()",
     "DB_ENV->set_lk_max_locks()", "DB_ENV->get_lk_max_objects()",
     "DB_ENV->set_lk_partitions()", "DB_ENV->get_lk_partitions()",
-    "DB_ENV->get_flags()",
+    "DB_ENV->get_flags()", "DB_ENV->set_cache_max()",
+    "DB_ENV->get_cache_max()",
     functions.
 
 4.8.1:
